# xenyke

./: .gitmodules  CMakeLists.txt  TODO
cmake/: utils.cmake  xenykeConfig.cmake.in
data/shaders/: frag.glsl  shader.glsl  vert.glsl
include/xenyke/: core.hpp  gl.hpp
include/xenyke/core/: bitset.hpp  color.hpp  config.hpp  debug.hpp  exception.hpp  ostream.hpp  rect.hpp  rect.inl  streambuf.hpp  vec.hpp  vec2.inl  vec3.inl
include/xenyke/eng/: camera.hpp  camera.inl  common.hpp  transform.hpp
include/xenyke/eng/ecs/: component.hpp  component_manager.hpp  component_obj.hpp  component_pool.hpp  config.hpp  ecs_controller.hpp  entity.hpp  entity_allocator.hpp  entity_manager.hpp  entity_pool.hpp  fwd.hpp  system.hpp
include/xenyke/gl/: config.hpp  fwd.hpp  gl_object.hpp  init.hpp  monitor.hpp  primitive.hpp  shader.hpp  shader_program.hpp  texture.hpp  vertex.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer.inl  video_mode.hpp  window.hpp
include/xenyke/gl/ext/: gl.h
include/xenyke/logger/: debug.hpp  level.hpp  time.hpp
include/xenyke/logger/console/: console.hpp  console_char_enum.hpp  console_esc_code.hpp  console_line.hpp  console_line_style.hpp
libs/: CMakeLists.txt
src/core/: CMakeLists.txt  bitset.cpp  color.cpp  debug.cpp  ostream.cpp  streambuf.cpp
src/eng/: CMakeLists.txt
src/eng/ecs/: entity.cpp  entity_manager.cpp  entity_pool.cpp
src/gl/: CMakeLists.txt  init.cpp  monitor.cpp  shader.cpp  shader_program.cpp  texture.cpp  vertex_array.cpp  window.cpp  window_manager.cpp  window_manager.hpp
src/gl/ext/: gl.c
tests/: CMakeLists.txt  _tests_entity_allocator.hpp  _tests_entity_manager.hpp  cube3D.hpp  main.cpp  test_EntityAllocator.cpp
